refactor(routing): レビュー指摘事項に対応する
- H1: Voyage に latestArrivalDate()/firstDepartureDate() を追加して DRY 解消
  DeadlineConstraint と ConstraintBasedRouteProvider の手動 stream を置き換え
- H2: ConstraintBasedRouteProvider からフィルタ責務を除去
  RouteSearchService.applyFilters() に集約（Option A: application が正典）
  RoutingConfig の routeConstraintChecker Bean も合わせて削除
- H3: transitDays==0 価格バグ修正
  rawTransitDays を先に Math.max(raw, 1) で補正してから価格計算
- H4: US21E2ETest E2 にソートテストの制約コメントを追記
- H5: RouteConstraintCheckerTest に CargoType 単独不合格テスト追加
  空チェッカー（恒等元）テストも追加
- H6/H7: RouteSearchService に applyFilters 意図コメント追加
  searchByCondition の @param/@return Javadoc を拡充
- M2: CompositeRouteConstraintChecker を List.copyOf() で不変化
- UI-H1: 割り当てボタンに確認モーダル追加（show.bs.modal イベントで値注入）
- UI-H2: ✅ 絵文字を Bootstrap Icons (bi-check-circle-fill) に置換
  Bootstrap Icons CDN を search.html に追加
- UI-H3: RouteCandidate に estimatedDeparture フィールドを追加
  Voyage.firstDepartureDate() で先頭レグ出発日を取得
  RoutingCandidateResponse・search.html 出発予定日表示を更新
- UI-M1: 件数バッジを bg-secondary → bg-primary に変更
  貨物種別バッジを bg-secondary → bg-info に変更

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>